# cmake-example-CMAKE_INCLUDE_CURRENT_DIR

./: Makefile  README.md  to-be-included.h
cmake/Modules/: EnableCurrentIncludeDir.cmake
src/: CMakeLists.txt  main.cpp
